# pkg/handler/middleware.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"errors"
+	"fmt"
 	"net/http"
 	"strings"
 
@@ -9,43 +10,48 @@ import (
 )
 
 const (
-	autorizationHeader = "Autorization"
-	userCtx            = "userId"
+	authorizationHeader = "Authorization"
+	userCtx             = "userId"
 )
 
 func (h *Handler) userIdentity(c *gin.Context) {
-	header := c.GetHeader(autorizationHeader)
+	header := c.GetHeader(authorizationHeader)
 	if header == "" {
 		NewErrorResponse(c, http.StatusUnauthorized, "empty auth header")
 		return
 	}
 
-	headerParts := strings.Split(header, "")
-	if len(headerParts) != 2 {
+	headerParts := strings.Split(header, " ")
+	if len(headerParts) != 2 || headerParts[0] != "Bearer" {
 		NewErrorResponse(c, http.StatusUnauthorized, "invalid auth header")
+		return		
+	}
+
+	fmt.Println("0000000000000000000000")
+	if len(headerParts[1]) == 0 {
+		NewErrorResponse(c, http.StatusUnauthorized, "token is empty")
 		return
 	}
 
-	usedId, err := h.services.Autorization.ParseToken(headerParts[1])
+	
+	userId, err := h.services.Authorization.ParseToken(headerParts[1])
 	if err != nil {
 		NewErrorResponse(c, http.StatusUnauthorized, err.Error())
 		return
 	}
 
-	c.Set(userCtx, usedId)
+	c.Set(userCtx, userId)
 }
 
 func getUserId(c *gin.Context) (int, error) {
 	id, ok := c.Get(userCtx)
 	if !ok {
-		NewErrorResponse(c, http.StatusInternalServerError, "user id not found")
 		return 0, errors.New("user id not found")
 	}
 
 	idInt, ok := id.(int)
 	if !ok {
-		NewErrorResponse(c, http.StatusInternalServerError, "user id not found")
-		return 0, errors.New("user id not found")
+		return 0, errors.New("user id is of invalid type")
 	}
 
 	return idInt, nil
